--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Oraclefish Coral Jumper</title>
     <style>
         html{
-            background-image:url(assets/underwater.jpg);
+            background-image:url(underwater.jpg);
             background-repeat:no-repeat;
             background-size:400px 400px;
             background-position: top;
