--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <title>Oraclefish Coral Jumper</title>
     <style>
         html{
-            background-image:url(underwater.jpg);
-            background-repeat:no-repeat;
-            background-size:400px 400px;
-            background-position: top;
+            background-color:#333;
+            display:flex;
+            flex-flow:column;
+            align-items:center;
+            justify-content:center;
+            
+        }
+        #canvaswrapper {
+            background-image: url(underwater.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            width: 300px;
+            height: 280px;
+            padding: 5px;
         }
     </style>
     <script src="game.js" type="text/javascript"></script>
